--- a/Mod31/source/code.html
+++ b/Mod31/source/code.html
@@ -22,8 +22,7 @@
   <script src="assets/js/vendors.js"></script>
   <script src="/lib/jQuery_ui/jquery-ui.js"></script>
   <title>Об оплате - AMotors.spb</title>
-  <meta name="keywords"
-    content="автосервис шушары, автосервис Пушкин, автозапчасть адрес телефон, автозапчасти шушары, магазин автозапчастей +в пушкине, автосервис отзывы">
+  <meta name="keywords" content="автосервис шушары, автосервис Пушкин, автозапчасть адрес телефон, автозапчасти шушары, магазин автозапчастей +в пушкине, автосервис отзывы">
   <meta name="description" content="Автосервис Автошуши в Шушарах автозапчасти Пушкин СТО">
   <link rel="stylesheet" href="/templates/modex/css/docpart/style.css" type="text/css">
   <script src="/lib/jQuery_ui/jquery-ui.js"></script>
